# projeto-streamlit

./: Cadastro_clientes.py  README.md  clientes.csv  consulta.py  pyproject.toml
.devcontainer/: devcontainer.json
