[project]
name = "cadastro-clientes"
version = "0.1.0"
description = ""
authors = [
    {name = "Seu Nome",email = "seu.email@exemplo.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.53.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cadastro_clientes", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
